# HW_

./: CMakeLists.txt  README.md  compilation.bat
include/: Data.h  FeatureVector.h  Sample.h  knn.h
source/: CMakeLists.txt  ClassificationReport.cpp  ClassificationReport.h  Data.cpp  Data.h  FeatureVector.cpp  FeatureVector.h  KnnCosine.cpp  KnnCosine.h  Sample.cpp  Sample.h  knn.cpp  knn.h  main.cpp
